fix: menu on small vh

--- a/style.css
+++ b/style.css
@@ -94,6 +94,8 @@ a, a:active {
 @media (max-width: 1310px) {
   nav, .close-bg {
     z-index: 1;
+    height: 100%;
+    overflow: auto;
   }
 
   .photo {
